feat: Labor Camp inspired styling tweaks
This commit is a grab bag of changes related to styling Labor Camp
according to curatorial and MAT feedback. Lots of work into title styling
and the image grid. Notably this introduces configurable settings on a
per-exhibition basis that tweak how the exhibition is presented.

More to come!

--- a/foot-in-the-door/data/exhibitions/2882.md
+++ b/foot-in-the-door/data/exhibitions/2882.md
@@ -1,5 +1,8 @@
 ---
 slug: labor-camp
 wpLink: https://new.artsmia.org/exhibition/piotr-szyhalski-labor-camp-covid-19-labor-camp-report
+segmentArtTitles: false
+gridSpacing: 1
+gridMaxColumns: 5
 ---
 
