feat: Labor Camp updates
mainly - show all ~300 related works on the artwork page
also fix a hardcoded exhibition title
and properly format <Text> in a few places

--- a/foot-in-the-door/data/exhibitions/2882.md
+++ b/foot-in-the-door/data/exhibitions/2882.md
@@ -4,5 +4,7 @@ wpLink: https://new.artsmia.org/exhibition/piotr-szyhalski-labor-camp-covid-19-l
 segmentArtTitles: false
 gridSpacing: 1
 gridMaxColumns: 5
+gridMinColumns: 3
 ---
+
 
