fix: hide TOC for Italian Printmakers

--- a/foot-in-the-door/data/exhibitions/2876.md
+++ b/foot-in-the-door/data/exhibitions/2876.md
@@ -1,6 +1,6 @@
 ---
 wpLink: https://new.artsmia.org/exhibition/italian-printmakers-circa-1600-four-diverging-paths
-showTableOfContents: true
+showTableOfContents: false
 showImageCarousel: true
 imageCarousel:
   leadingImages: [53258, 109721, 53527, 138044]
