--- a/foot-in-the-door/data/exhibitions/2876.md
+++ b/foot-in-the-door/data/exhibitions/2876.md
@@ -5,5 +5,6 @@ showImageCarousel: true
 imageCarousel:
   leadingImages: [53258, 109721, 53527, 138044]
   leadingImagesIIIF: [ 'https://iiif.dx.artsmia.org/53258.jpg/1596,0,926,813/800,/0/default.jpg', 'https://iiif.dx.artsmia.org/109721.jpg/656,806,1291,1134/800,/0/default.jpg', 'https://iiif.dx.artsmia.org/53527.jpg/1007,2158,1912,1679/800,/0/default.jpg', 'https://iiif.dx.artsmia.org/138044.jpg/12579,767,2058,1807/800,/0/default.jpg	' ]
+  containOnHover: true
 ---
 
