feat: tweaks and adjustments for AIB21
enable search for AIB using dataPrefix
  (TODO how to search within a Mia-proper exhibition?)
adjust side-by-side comparison layout
integrate `dataPrefix` to fill the 'browse more' grid on the artwork page

'picture in picture' view of the main + auxilary work for narrow screens
  it was hard to get the scroll+sticky idea working on mobile, so flex to
  a smaller image of the main work in the corner (p-i-p style)

--- a/foot-in-the-door/data/exhibitions/2830.md
+++ b/foot-in-the-door/data/exhibitions/2830.md
@@ -8,6 +8,7 @@ imageCarousel:
   leadingImages: [138019, 138006, 137993, 137996, 138025, 138014, 137973, 138116, 137961]
   artDirection: [138025, 137993]
 gridMaxColumns: 7
+relatedSearchCriteria: artist:'Todd Webb'
 ---
 
 
