feat: creativity academy tweaks
show search for CA
add lockup to exhibition description 'above the fold'
and add a heading to the lockup in the footer

--- a/foot-in-the-door/data/exhibitions/2898.md
+++ b/foot-in-the-door/data/exhibitions/2898.md
@@ -5,6 +5,10 @@ exhibition_title: Creativity Academy
 wpLink: https://new.artsmia.org/stories/young-artists-make-their-mia-debut-through-the-creativity-academy
 display_date: April 13 – May 27
 dataPrefix: ca21
+lockup:
+  img: https://mia-collections-auxilary-images.s3.amazonaws.com/ca21/AROHA_LOGO_RGB_Color.png
+  tailwindStyle: max-w-xs text-center
+  heading: 'Major Supporter:'
 ---
 
 Mia’s Creativity Academy is a multiple-visit program for fourth-grade students, designed to foster creativity, critical thinking, communication, and collaboration. Due to the COVID-19 pandemic, the program went virtual for the 2020-2021 academic year. In replace of an in-person exhibition, students submitted artwork to their teachers and the images have been made available here.
@@ -15,3 +19,7 @@ Mia launched Creativity Academy in 2013–14. Since then the program has expande
 
 The program curriculum normally includes four 90-minute lessons, two at school and two at Mia, taught by experienced arts educators. This year students met virtually across five 60-minute lessons. During each lesson, students discuss an artwork in Mia’s collection, create original artworks, and engage in creative writing. Each year, the program culminates in a student exhibition at Mia.
 
+
+Major Sponsor:
+
+<img style="max-width: 30ch;" src="https://mia-collections-auxilary-images.s3.amazonaws.com/ca21/AROHA_LOGO_RGB_Color.png" />
