fix: modify Aroha logo
and other tweaks for Creativity Academy

--- a/foot-in-the-door/data/exhibitions/2898.md
+++ b/foot-in-the-door/data/exhibitions/2898.md
@@ -6,10 +6,12 @@ wpLink: https://new.artsmia.org/stories/young-artists-make-their-mia-debut-throu
 display_date: April 13 – May 27
 dataPrefix: ca21
 lockup:
-  img: https://mia-collections-auxilary-images.s3.amazonaws.com/ca21/AROHA_LOGO_RGB_Color.png
+  img: https://mia-collections-auxilary-images.s3.amazonaws.com/ca21/AROHA_LOGO_RGB_GreyScale_trim.png
   tailwindStyle: max-w-xs text-center
   heading: 'Major Supporter:'
 ---
+
+<span style="padding-top: -1em;" />
 
 Mia’s Creativity Academy is a multiple-visit program for fourth-grade students, designed to foster creativity, critical thinking, communication, and collaboration. Due to the COVID-19 pandemic, the program went virtual for the 2020-2021 academic year. In replace of an in-person exhibition, students submitted artwork to their teachers and the images have been made available here.
 
@@ -22,4 +24,4 @@ The program curriculum normally includes four 90-minute lessons, two at school a
 
 Major Sponsor:
 
-<img style="max-width: 30ch;" src="https://mia-collections-auxilary-images.s3.amazonaws.com/ca21/AROHA_LOGO_RGB_Color.png" />
+<img style="max-width: 30ch;" src="https://mia-collections-auxilary-images.s3.amazonaws.com/ca21/AROHA_LOGO_RGB_GreyScale_trim.png" />
